--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </video>
     </div>
     <div class="menu">
-        <h1 id="initial-text">THE AGENT... HAS BEEN ACTIVATED.</h1>
+        <h1 id="initial-text">STORY /// 0001 "THE AGENT"</h1>
         <button id="command-button" class="hidden">Begin Initiation.</button>
         <p id="story-text" class="hidden"></p>
         <audio id="background-music" src="song.mp3" type="audio/mp3"></audio>
